--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "porsche",
   "version": "0.1.0",
+  "homepage": "https://cyph3r05.github.io/PorscheRecreation",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.0.2",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^3.1.0",
     "google-maps-react": "^2.0.2",
     "material-ui": "^0.20.2",
     "react": "^16.13.0",
